--- a/roles/app/tasks/main.yml
+++ b/roles/app/tasks/main.yml
@@ -1,4 +1,4 @@
-#- name: Install needed packages
+# - name: Install needed packages
 #  tags: app, setup, prerequisites
 #  ansible.builtin.package:
 #    name:
@@ -29,10 +29,10 @@
 
 - name: Append each host's IP to exploring_agents_dict with "agentN"
   ansible.builtin.set_fact:
-    exploring_agents_dict: "{{ exploring_agents_dict | combine({ hostvars[item].ansible_host: 'agent' + '%03d' | format(item_index + 1) }) }}"
+    exploring_agents_dict: "{{ exploring_agents_dict | combine({hostvars[item].ansible_host: 'agent' + '%03d' | format(item_index + 1)}) }}"
   with_items: "{{ groups['all'] }}"
   loop_control:
-    index_var: item_index  # Provides the index of the current item in the loop
+    index_var: item_index
 
 - name: Display exploring_agents_dict
   ansible.builtin.debug:
@@ -92,41 +92,11 @@
   ansible.builtin.debug:
     var: app_env
 
-- name: Copy deploy keys to remote host
-  tags: app, deploy, keys, explorer, watcher
-  ansible.builtin.copy:
-    src: "files/{{ item }}"
-    dest: "~/.ssh/{{ item }}"
-    mode: '0600'
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-  loop:
-    - ExplorationToyProblem-Backend
-    - ExplorationToyProblem-LocalFront
-    - ExplorationToyProblem-GlobalFront
-
-- name: Ensure loginctl user-session exists
-  ansible.builtin.command:
-    # cmd: "loginctl enable-linger {{ ansible_user }}"
-    cmd: "loginctl enable-linger {{ ansible_user }}"
-    creates: "/var/lib/systemd/linger/{{ ansible_user }}"
-  become_user: "{{ ansible_user }}"
-  when: not adminsys|default(true)|bool
-
-- name: Create all the intermediates subdirectories for systemd user services
-  ansible.builtin.file:
-    path: "~/.config/systemd/user"
-    state: directory
-    mode: '0755'
-    owner: "{{ ansible_user }}"
-    group: "{{ ansible_user }}"
-  when: not adminsys|default(true)|bool
-
 - name: Create directory if not exist
   ansible.builtin.file:
     path: /opt/app/
     state: directory
-    mode: 'u=rwx,go=rx'
+    mode: '2775'
 
 - name: Deploy explorer module
   tags: app, deploy, explorer
@@ -143,3 +113,10 @@
   ansible.builtin.include_tasks:
     file: watcher.yml
   when: app_modules.watcher | default(false)
+
+- name: Make all files accessible to smac group
+  ansible.builtin.file:
+    path: /opt/app
+    recurse: true
+    group: smac
+    mode: '2775'
