--- a/roles/simulation/defaults/main.yml
+++ b/roles/simulation/defaults/main.yml
@@ -3,3 +3,7 @@ simulation_api_host: "localhost"
 simulation_api_port: 3000
 simulation_count: 5
 simulation_name: "default"
+
+# Change if you change db / machines ...
+target_node: "172.18.49.134"
+mongo_port: 27018
