--- a/roles/simulation/tasks/loop_simulation.yml
+++ b/roles/simulation/tasks/loop_simulation.yml
@@ -1,9 +1,23 @@
 - name: Debug the number of simulations
   ansible.builtin.debug:
-    msg: "Starting simulation number {{ simulation_number }} with {{ repetition_number }} tries"
+    msg: "Starting simulation with {{ repetition_count }} tries"
 
-- name: Include run_simulation tasks for each simulation with N repetitions
+- name: Debug simulation parameters
+  ansible.builtin.debug:
+    var: simulation_params
+
+- name: Set number of agents to use
+  ansible.builtin.set_fact:
+    agents_list: "{{ full_agents_list[:simulation_params.number_of_agents] }}"
+
+- name: Update the replica set configuration before starting simulations
+  ansible.builtin.include_tasks: reconfig-mongo-replset.yml
+  vars:
+    agents_list: "{{ agents_list }}"
+    all_hosts: "{{ agents_list | map('regex_replace', '^(.*)$', '\\1:27018') | list }}"
+
+- name: Include run_simulation tasks for each simulation with "repetition_count" repetitions
   ansible.builtin.include_tasks: run_simulation.yml
-  loop: "{{ range(1, repetition_number + 1) | list }}"
+  loop: "{{ range(1, repetition_count + 1) | list }}"
   loop_control:
-    loop_var: repetition_count
+    loop_var: repetition_number
