--- a/roles/simulation/tasks/run_simulation.yml
+++ b/roles/simulation/tasks/run_simulation.yml
@@ -5,11 +5,11 @@
     return_content: true
     timeout: 10
   register: simulation_wait_result
-  retries: 10
+  retries: 20
   delay: 5
   until: >-
     (simulation_wait_result.status == 200)
-    and (simulation_wait_result.json is defined and (simulation_wait_result.json.isExploring | default(false) | bool))
+    and (simulation_wait_result.json is defined and (not simulation_wait_result.json.isExploring | default(false) | bool))
   failed_when: false
 
 - name: Prepare database before starting simulations
@@ -18,7 +18,7 @@
     method: POST
     status_code: 200
 
-- name: Run simulation for agent {{ simulation_number }}
+- name: Run simulation for agent {{ repetition_number }}
   ansible.builtin.uri:
     url: "http://{{ item }}:{{ simulation_api_port }}/api/explore"
     method: POST
@@ -34,6 +34,6 @@
     return_content: true
   register: explore_result
   retries: 60
-  delay: 10
+  delay: 60
   until: explore_result.json.isExploring == false
   loop: "{{ agents_list }}"
