--- a/roles/db/tasks/couchdb.yml
+++ b/roles/db/tasks/couchdb.yml
@@ -131,6 +131,32 @@
       ansible.builtin.set_fact:
         couchdb_credentials: "Basic {{ (couchdb_admin_user + ':' + couchdb_admin_password) | b64encode }}"
 
+    - name: Look for existing v2grid database
+      ansible.builtin.uri:
+        url: "http://127.0.0.1:{{ couchdb_port }}/v2grid"
+        method: GET
+        headers:
+          Content-Type: application/json
+          Authorization: "{{ couchdb_credentials }}"
+        status_code: [200, 404]
+      register: db_check
+      ignore_errors: true
+    
+    - name: Debug database check result
+      ansible.builtin.debug:
+        var: db_check.status
+    
+    - name: If database exists, delete it to recreate
+      ansible.builtin.uri:
+        url: "http://127.0.0.1:{{ couchdb_port }}/v2grid"
+        method: DELETE
+        headers:
+          Content-Type: application/json
+          Authorization: "{{ couchdb_credentials }}"
+        status_code: 200
+      when: db_check.status == 200
+      ignore_errors: true
+
     - name: Put v2grid database in CouchDB
       tags: db, couchdb, config
       ansible.builtin.uri:
@@ -141,6 +167,51 @@
           Authorization: "{{ couchdb_credentials }}"
         status_code: [201, 412]
       register: create_db_result
+      ignore_errors: true
+
+    - name: Look for existing replication setup
+      ansible.builtin.uri:
+        url: "http://127.0.0.1:{{ couchdb_port }}/_replicator/_all_docs"
+        method: GET
+        headers:
+          Content-Type: application/json
+          Authorization: "{{ couchdb_credentials }}"
+        status_code: 200
+      register: replication_check
+      ignore_errors: true
+
+    - name: Debug existing replications
+      ansible.builtin.debug:
+        var: replication_check.json.rows
+      when: replication_check is defined and replication_check.json is defined
+    
+    - name: If existing replication found, remove them to overwrite them
+      ansible.builtin.uri:
+        url: "http://127.0.0.1:{{ couchdb_port }}/_replicator/{{ item.id }}?rev={{ item.value.rev }}"
+        method: DELETE
+        headers:
+          Content-Type: application/json
+          Authorization: "{{ couchdb_credentials }}"
+        status_code: 200
+      loop: "{{ replication_check.json.rows | list }}"
+      when: replication_check is defined and replication_check.json.rows | length > 0
+      ignore_errors: true
+
+    - name: If deletion then purge
+      ansible.builtin.uri:
+        url: "http://127.0.0.1:{{ couchdb_port }}/_replicator/_purge"
+        method: POST
+        headers:
+          Content-Type: application/json
+          Authorization: "{{ couchdb_credentials }}"
+        body_format: json
+        body: |
+          {
+            "{{ item.id }}": [ "{{ item.value.rev }}" ]
+          }
+        status_code: 201
+      loop: "{{ replication_check.json.rows | list }}"
+      when: replication_check is defined and replication_check.json.rows | length > 0
       ignore_errors: true
 
     - name: Set up replication between CouchDB nodes
